file(GLOB_RECURSE SRC "*/*.cpp")
include_directories(code)
include_directories(compiler)
include_directories(jvm)
include_directories(parser)
include_directories(test)
include_directories(tree)
include_directories(util)
include_directories(visitor)
#add_subdirectory(code)
#add_subdirectory(compiler)
#add_subdirectory(jvm)
#add_subdirectory(parser)
#add_subdirectory(test)
#add_subdirectory(tree)
#add_subdirectory(util)
#add_subdirectory(visitor)

#aux_source_directory(. DIR_SRC_SRCS)
add_executable(zlcompiler main.cpp ${SRC})